--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kasplex",
+  "name": "kasplex-api",
   "version": "1.0.0",
   "description": "A library that uses the kasplex api",
   "homepage": "https://kascow.io",
