--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "declaration": true,
     "declarationDir": "./dist/types" 
   },
-  "include": ["./api/**/*", "./index.ts"],
+  "include": ["api/**/*", "index.ts"],
   "exclude": ["node_modules", "dist"]
 }
